Overflow fix

--- a/css/hero.css
+++ b/css/hero.css
@@ -4,12 +4,15 @@
 ---------------------------------------------------*/
 
 	#hero {
-		width:100vw;
 		height:auto;
 		max-height:100%;
 		position:relative;
-		z-index:0;
-		margin-left: -30px;
+		z-index: 0;
+
+		@media (min-width: 1025px) {
+			width:100vw;
+			margin-left: -30px;
+		}
 	}
 
 	#hero.landing {
@@ -87,7 +90,7 @@
 
 	#hero-image-wrapper {
 		position: fixed;
-		width: 100vw;
+		width: 100%;
 		height: 100vh;
 		z-index: 0;
 		margin: 0 auto;
